Unterordner speichern, link zur Projektbeschreibung

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h1> Heimat der Happy-Hirsche</h1>
 <h3> Madeleine Hill, Dominic Kreisel, Sebastian Spreitzer</h3>
-<a href=""> Link zur Organisation</a>
+<head>
+
+</head>
+<body>
+
+</body>
+<a href="Daten/Projektbeschreibung.pdf"> Link zur Projektbeschreibung</a>
