--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <h1> Heimat der Happy-Hirsche</h1>
-    <h3> Madeleine Hill, Dominic Kreisel, Sebastian Spreitzer</h3>F
+    <h3> Madeleine Hill, Dominic Kreisel, Sebastian Spreitzer</h3>
 </body>
+<footer>
 <a href="Daten/Projektbeschreibung.pdf"> Link zur Projektbeschreibung</a>
+</footer>
 </html>
 
 
