--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3> Madeleine Hill, Dominic Kreisel, Sebastian Spreitzer</h3>
 </body>
 <footer>
-<a href="Daten/Projektbeschreibung.pdf"> Link zur Projektbeschreibung</a>
+<a href="Konzept.pdf"> Link zur Projektbeschreibung</a>
 </footer>
 </html>
 
