map added with starting view on glockner

--- a/Nationalpark Hohe Tauern/index.html
+++ b/Nationalpark Hohe Tauern/index.html
@@ -32,6 +32,15 @@
 </head>
 
 <body>
+    <main>
+        <header>
+            <h2>Test</h2>
+        </header>
+        <article>
+            <div id="map"></div>
+        </article>
+
+    </main>
 
 </body>
 
