changed colors for zones

--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -34,7 +34,12 @@
 <body>
     <main>
         <header>
-            <h2>Test</h2>
+            <h2><i class="fa-solid fa-otter"></i> Der Nationalpark Hohe Tauern</h2>
+            <nav>
+                <i class="fa-solid fa-mountain-sun"></i>
+                <a href="https://heimatderhappyhirsche.github.io/">Home</a>
+
+            </nav>
         </header>
         <article>
             <div id="map"></div>
