--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </body>
 <footer>
 <a href="Konzept.pdf"> Link zur Projektbeschreibung</a>
+<a href="NationalparkHoheTauern/index.html">Link zur Nationalparkarte</a>
 </footer>
 </html>
 
