--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -44,7 +44,14 @@
         <article>
             <div id="map"></div>
         </article>
+        <footer>
+            <strong>Datenquellen:</strong>
+            <nav>
+                <a href="https://hohetauern.at/de/">Nationalpark Hohe Tauern</a>
+                <a href="https://www.parcs.at/npa/">parcs.at</a>
 
+            </nav>
+        </footer>
     </main>
 
 </body>
