--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -42,11 +42,8 @@
             </nav>
         </header>
         <article>
-            <div id="map" style="width: 70%; height: 100vh; float: left;"></div>
-            <div id="info" style="width: 30%; height: 100vh; float: right; padding: 10px; overflow-y: auto;">
-                <h2>Feature Information</h2>
-                <p id="comment"></p>
-            </div>
+            <div id="map"></div>
+
 
         </article>
         <footer>
