moore updated, text below map

--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -43,6 +43,10 @@
         </header>
         <article>
             <div id="map"></div>
+            <div id="info" style="width: 100%; padding: 10px; overflow-y: auto;">
+                <h2 id="feature-name">Klicke auf ein Moor für genaue Infos</h2>
+                <p id="comment"></p>
+            </div>
 
 
         </article>
