--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -25,6 +25,9 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css'
         rel='stylesheet' />
 
+    <!-- Leaflet Omnivore -->
+    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
+
 
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css" />
