--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -47,7 +47,7 @@
         <article>
             <div id="map"></div>
             <div id="info" style="width: 100%; padding: 10px; overflow-y: auto;">
-                <h2 id="feature-name">Klicke auf ein Moor für genaue Infos</h2>
+                <h2 id="feature-name"></h2>
                 <p id="comment"></p>
             </div>
 
