--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -74,6 +74,7 @@
             <div id="info" style="width: 100%; padding: 10px; overflow-y: auto;">
                 <h2 id="feature-name"></h2>
                 <p id="comment"></p>
+            <div id="wikipedia-content"></div>
             </div>
 
 
