Verlinkung Webseiten in nav eingefügt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </body>
 <footer>
 <a href="Konzept.pdf"> Link zur Projektbeschreibung</a>
-<a href="NationalparkHoheTauern/index.html">Link zur Nationalparkarte</a>
+
 </footer>
+<nav>
+    <a href="NationalparkHoheTauern/index.html"><i class="fa-solid fa-circle-arrow-left"></i> Nationalpark Hohe Tauern - Ökologie</a>
+    <br>
+    <a href="HoheTauernTourismus/index.html"> <i class="fa-solid fa-house-user"></i> Nationalpark Hohe Tauern - Tourismus</a>
+</nav>
 </html>
 
