--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -24,8 +24,14 @@
 </head>
 
 <body>
-    <h1>Tourismus im Nationalpark Hohe Tauern</h1>
+    <main>
+        <h1>Tourismus im Nationalpark Hohe Tauern</h1>
+        <article>
+            <div id="map"></div>
+            <div id="info" style="width: 100%; padding: 10px; overflow-y: auto;"></div>
+        </article>
 
+    </main>
 </body>
 <footer>
 
