--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -19,10 +19,16 @@
 
     <!-- Leaflet Providers -->
     <script src="https://unpkg.com/leaflet-providers@latest/leaflet-providers.js"></script>
-    
+
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css" />
     <script defer src="main.js"></script>
+
+    <!--Leaflet Fullscreen-->
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css'
+        rel='stylesheet' />
+
 </head>
 
 <body>
