etappen.js einbauen

--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </meta>
     <title>Tourismus im Nationalpark Hohe Tauern</title>
 
     <!-- Font Awesome -->
@@ -23,6 +24,7 @@
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css" />
     <script defer src="main.js"></script>
+    <script src="etappen.js"></script>
 
     <!--Leaflet Fullscreen-->
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
