--- a/NationalparkHoheTauern/index.html
+++ b/NationalparkHoheTauern/index.html
@@ -65,7 +65,7 @@
             <h2><i class="fa-solid fa-otter"></i> Der Nationalpark Hohe Tauern</h2>
             <nav>
                 <i class="fa-solid fa-mountain-sun"></i>
-                <a href="https://heimatderhappyhirsche.github.io/">Home</a>
+                <a href="">Home</a>
 
             </nav>
         </header>
