Grenzen von Österreich in Übersichtskarte eingefügt

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <span id="forecast-date"></span>
             </nav>
             <nav>
-                <p> Du möchtest mehr Informationen über touristische Angebote im Nationalpark Hohe Tauern: <a href="HoheTauernTourismus/index.html"> Nationalpark Hohe Tauern - Tourismus</a> <br>
-                    Oder bist du doch eher an der Landschaft und Umwelt des Nationalparks Hohe Tauern interessiert: <a href="NationalparkHoheTauern/index.html"> Nationalpark Hohe Tauern - Ökologie und Umwelt</a></p>
+                <p> Du möchtest mehr Informationen über touristische Angebote im größten Nationalpark Österreichs - Hohe Tauern: <a href="HoheTauernTourismus/index.html"> Nationalpark Hohe Tauern - Tourismus</a> <br>
+                    Oder bist du doch eher an der Landschaft und Umwelt des Nationalparks Hohe Tauern interessiert: <a href="NationalparkHoheTauern/index.html"> Nationalpark Hohe Tauern - Schönheit der Natur</a></p>
             </nav>
         </footer>
     </main>
