--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -24,7 +24,8 @@
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css" />
     <script defer src="main.js"></script>
-    <script src="ETAPPEN.js"></script>
+    <script src="Daten/ETAPPEN.json"></script>
+    <script src="Daten/Almzentren.json"></script>
 
     <!--Leaflet Fullscreen-->
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
