Wikipedia Informationen bei Klick auf Marker abrufen

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             </p>
             <p><a href="https://www.nationalparksaustria.at/de/" target="met.no">Offizielle Website der Nationalparks</a></p>
             <div id="map"></div>
+            <div id="wikipedia-content">
+                <h3>Wikipedia Informationen</h3>
+                <p id="wiki-text">Klicken Sie auf einen Nationalpark-Marker, um mehr Informationen zu erhalten.</p>
+            </div>
         </article>
         <footer>
             <strong>Datenquellen:</strong>
