Änderungen vorgenommen, damit ganzer wikipediartikel und nicht nur einführung angezeigt wird

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div id="wikipedia-content">
                 <h3>Wikipedia Informationen</h3>
                 <p id="wiki-text">Klicken Sie auf einen Nationalpark-Marker, um mehr Informationen zu erhalten.</p>
+                <div id="wiki-full"></div>
             </div>
         </article>
         <footer>
