--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 Nationalparks sind nicht nur Schutz- und Erlebnisräume, sondern auch Forschungslaboratorien und Hotspots naturbezogenen Wissens. Ob Langzeit-Monitoring, Wildkatzenerhebung, Graugans-Beobachtung oder Bildungsprojekte im Zeichen des Klimaschutzes: Unsere Nationalparks schaffen Fakten, vermitteln wertvolles Wissen und entfachen Leidenschaft für Natur.<br>
                 Die Standorte der Nationalparks sowie eine Vorhersage über Wind und Wetter <em>(zur besseren Planung Ihres Ausflugs)</em> entnehmen Sie der nachfolgenden Karte.
             </p>
-            <p><a href="https://www.nationalparksaustria.at/de/" target="met.no">Offizielle Website der Nationalparks</a></p>
+            <p><a href="https://www.nationalparksaustria.at/de/" target="_blank">Offizielle Website der Nationalparks</a></p>
             <div id="map"></div>
             <div id="wikipedia-content">
                 <h3>Wikipedia Informationen</h3>
@@ -57,10 +57,10 @@
         <footer>
             <strong>Datenquellen:</strong>
             <nav>
-                <a href="https://api.met.no/weatherapi/locationforecast/2.0/documentation">MET Norway Locationforecast</a> |
-                <a href="https://github.com/metno/weathericons/">MET Weather API icons</a> |
-                <a href="https://api.met.no/weatherapi/locationforecast/2.0/compact?lat=47.267222&lon=11.392778">MET Norway Vorhersage Innsbruck</a> |
-                <a href="https://www.ecmwf.int/en/forecasts/datasets/open-data">ECMWF Open Data</a>
+                <a href="https://api.met.no/weatherapi/locationforecast/2.0/documentation" target="_blank">MET Norway Locationforecast</a> |
+                <a href="https://github.com/metno/weathericons/" target="_blank">MET Weather API icons</a> |
+                <a href="https://api.met.no/weatherapi/locationforecast/2.0/compact?lat=47.267222&lon=11.392778" target="_blank">MET Norway Vorhersage Innsbruck</a> |
+                <a href="https://www.ecmwf.int/en/forecasts/datasets/open-data" target="_blank">ECMWF Open Data</a>
                 <span id="forecast-date"></span>
             </nav>
         </footer>
