--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -114,12 +114,15 @@
                         href="https://www.outdooractive.com/de/route/bergtour/nationalpark-region-hohe-tauern/kreuzeckhoehenweg-1.-tag-moellbruecke-557m-salzkofelhuette-1987m/803563414/#caml=8hk,270xzz,7qutzq,0,0">Quelle</a>
                 </div>
             </div>
-            <p>Gegenüber vom Bahnhofes von Möllbrücke, vorbei an der Kirche und unmittelbar danach links begann unsere
-                Tour.Ein gut markierter und landschaftlich schön integrierter Zustieg über den sogenannten Sachsenweg
-                führt uns über den Amaißboden und der Harrachalm zur Rosseben weiter zur Salzkofelhütte, der
-                Ausgangspunkt unserer Kreuzeck Höhenwanderung. Unsere Hütte liegt direkt unterhalb des
-                Salzkofelmassives.Herrlich blauer Himmel und angenehme Temperaturen waren von Anfang an unsere
-                Begleiter.</p>
+            <details closed="">
+                <summary><strong>Weitere Infos</strong></summary>
+                Gegenüber vom Bahnhofes von Möllbrücke, vorbei an der Kirche und unmittelbar danach links begann unsere
+            Tour.Ein gut markierter und landschaftlich schön integrierter Zustieg über den sogenannten Sachsenweg
+            führt uns über den Amaißboden und der Harrachalm zur Rosseben weiter zur Salzkofelhütte, der
+            Ausgangspunkt unserer Kreuzeck Höhenwanderung. Unsere Hütte liegt direkt unterhalb des
+            Salzkofelmassives.Herrlich blauer Himmel und angenehme Temperaturen waren von Anfang an unsere
+            Begleiter.
+            </details>
 
             <h3>Etappe 2: Salzkofelhütte - Feldnerhütte </h3>
             <div class="summary">
@@ -146,11 +149,13 @@
                         href="https://www.outdooractive.com/de/route/bergtour/nationalpark-region-hohe-tauern/kreuzeckhoehenweg-2.-tag-salzkofelhuette1987-m-feldnerhuette-2186-m/803564721/#caml=99c,26f22z,7qu55j,0,0">Quelle</a>
                 </div>
             </div>
-            <p>Der Übergang von der Salzkofelhütte zur westlich gelegenen Feldnerhütte ist ausgesprochen aussichtsreich.
+            <p1>Der Übergang von der Salzkofelhütte zur westlich gelegenen Feldnerhütte ist ausgesprochen
+                aussichtsreich.
                 Hier wechseln sich Grasflächen mit alpinen Abschnitten, felsdurchsetzten Passagen ab. Etwas kritisch ist
                 der Aufstieg zur Goldgrubenscharte und die Löcherwände. Etwas später erreichen wir die Annaruhe, eine
                 überwachsene Graskuppe mit einem eindrucksvollen Blick über die Hochgebirgslandschaft. Unweit der
                 Feldnerhütte kommen wir zum Glanzsee, welcher sich für ein Erfrischendes Bad gut eignet.</p>
+            </p1>
 
             <h3>Etappe 3: Feldnerhütte - Hugo-Gerbers-Hütte</h3>
             <div class="summary">
@@ -177,10 +182,10 @@
                         href="https://www.outdooractive.com/de/route/bergtour/nationalpark-region-hohe-tauern/kreuzeckhoehenweg-3.tag-feldnerhuette-2186m-hugo-gerbers-huette-2347m/803566363/#caml=8hk,25me2j,7qs7qy,0,0">Quelle</a>
                 </div>
             </div>
-            <p>Neben den überwältigten Panoramablicken, den unzähligen malerischen Bergseen und einer nahezu
+            <p1>Neben den überwältigten Panoramablicken, den unzähligen malerischen Bergseen und einer nahezu
                 grenzenlosen Weite erwarten Wanderer auf diesem Weg. Am heutigen Tag wird auch das Hochkreuz, der
                 höchste Gipfel der gesamten Berggruppe überschritten. Diese Etappe stellt aufgrund der vielen felsigen
-                teils ausgesetzten Passagen hohe Anforderungen an Trittsicherheit und Schwindelfreiheit.</p>
+                teils ausgesetzten Passagen hohe Anforderungen an Trittsicherheit und Schwindelfreiheit.</p1>
 
             <h3>Etappe 4:Hugo-Gerbers-Hütte - Anna Schutzhaus </h3>
             <div class="summary">
@@ -207,7 +212,7 @@
                         href="https://www.outdooractive.com/de/route/bergtour/kreuzeck-gruppe/kreuzeckhoehenweg-4.-tag-hugo-gerbers-huette-anna-schutzhaus/803590867/#caml=7ps,24ovc1,7qpois,0,0">Quelle</a>
                 </div>
             </div>
-            <p>Die Kreuzeckgruppe steht aufgrund fehlender 3.000er und geringerer klettertechnischer Ansprüche im
+            <p1>Die Kreuzeckgruppe steht aufgrund fehlender 3.000er und geringerer klettertechnischer Ansprüche im
                 Schatten der übrigen Hohen Tauern. Auf diese Weise konnten sich hier kleine und urtümliche
                 Alpenvereinshütten erhalten. Ebenso besonders ist die weitgehend wilde, wunderschöne Natur entlang des
                 Höhenwegs, der immer auf oder nah dem Hauptkamm der Kreuzeckgruppe von dessen Ost- bis zum Westende
@@ -215,7 +220,7 @@
                 Richtung Süden noch traumhaftere Aussichten als die vorherige. Gleichzeitig ist sie technisch deutlich
                 einfacher und nur aufgrund der Länge und Höhenmeter eine schwierige Unternehmung. Die Umgebung ist von
                 Wiesen und später Heidekraut geprägt und läd häufig zum Verweilen ein - besonders dann, wenn sich tolle
-                Aussichten auf die schroffen Lienzer Dolomiten einstellen.</p>
+                Aussichten auf die schroffen Lienzer Dolomiten einstellen.</p1>
         </article>
 
     </main>
