Verlinkung zu anderen Webseiten

--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -235,7 +235,10 @@
     </main>
 </body>
 <footer>
-
+<nav>
+    <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |
+    <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
+</nav>
 </footer>
 
 </html>
