icon quelle geändert

--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -112,7 +112,7 @@
                         <i class="fas fa-download"></i> <a href="Daten/kreuzeckhoehenweg_etappe1.gpx">Download GPX</a>
                     </div>
                     <div class="summary-badge">
-                        <i class="fas fa-download"></i> <a
+                        <i class="fa-solid fa-globe"></i> <a
                             href="https://www.outdooractive.com/de/route/bergtour/nationalpark-region-hohe-tauern/kreuzeckhoehenweg-1.-tag-moellbruecke-557m-salzkofelhuette-1987m/803563414/#caml=8hk,270xzz,7qutzq,0,0">Quelle</a>
                     </div>
                 </div>
