--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -236,7 +236,7 @@
 </body>
 <footer>
 <nav>
-    <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |
+    <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
     <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
 </nav>
 </footer>
