--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -235,6 +235,7 @@
     </main>
 </body>
 <footer>
+    Quellen:  <a href=" https://data.gv.at">data.gv.at</a> |  <a href="https://www.outdooractive.com/de/">outdooractive.de</a>
 <nav>
     <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
     <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
