--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </meta>
-    <title>Tourismus im Nationalpark Hohe Tauern</title>
+    <title>Wandertourismus im Nationalpark Hohe Tauern</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -52,6 +52,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/MarkerCluster.css"
         integrity="sha512-mQ77VzAakzdpWdgfL/lM1ksNy89uFgibRQANsNneSTMD/bj0Y/8+94XMwYhnbzx8eki2hrbPpDm0vD0CiT2lcg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Leaflet GPX-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.7.0/gpx.js"
+        integrity="sha512-FatQYmF8k/KuvOgmwfRGRqlyzbG13etWz1GOO+JO6YQyhGgw5tVl9ihC9RS8S6iiS18CZAnZBvUoKHlGI6BTPQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
 <body>
@@ -63,7 +68,7 @@
                     <a href="https://github.com/HeimatDerHappyHirsche">Github</a>
             </nav>
         </header>
-        <h1><i class="fa-solid fa-person-hiking"></i> Tourismus im und um den Nationalpark Hohe Tauern</h1>
+        <h1><i class="fa-solid fa-person-hiking"></i> Wandertourismus im und um den Nationalpark Hohe Tauern</h1>
         <article>
             <p> Auch das Entdecken der Natur auf Wanderwegen im Nationalpark Hohe Tauern ist ein echter Spaß. Wo und Wie
                 die Verbindungen sind und wann und wo eingekehrt werden kann seht ihr in der Karte.
@@ -74,15 +79,19 @@
                 <button onclick="zoomToEtappe1()">Etappe 1</button>
                 <button onclick="zoomToEtappe2()">Etappe 2</button>
                 <button onclick="zoomToEtappe3()">Etappe 3</button>
-                <button onclick="zoomToEtappe4()">Etappe 4</button>   
+                <button onclick="zoomToEtappe4()">Etappe 4</button>
             </div>
             <div class="backbutton">
                 <button onclick="zoomToNP()">Nationalpark</button>
             </div>
             <div id="map"></div>
             <div id="info" style="width: 100%; padding: 10px; overflow-y: auto;"></div>
-            <div id="profile"></div>
+            <h3>Höhenprofile Wanderwege Hohe Tauern</h3>
+            <div id="profile2"></div>
             <h2>Ein echtes Highlight: Der Kreuzeckhöhenweg</h2>
+            <h3>Höhenprofile Kreuzeckhöhenweg</h3>
+            <div id="profile"></div>
+            
             <p>Dieser Wanderweg gehört in die <b> Kategorie schwer</b> und ist etwas für echte Abenteurer. Er besteht
                 aus vier Etappen:
 
@@ -234,11 +243,12 @@
     </main>
 </body>
 <footer>
-    Quellen:  <a href=" https://data.gv.at">data.gv.at</a> |  <a href="https://www.outdooractive.com/de/">outdooractive.de</a>
-<nav>
-    <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
-    <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
-</nav>
+    Quellen: <a href=" https://data.gv.at">data.gv.at</a> | <a
+        href="https://www.outdooractive.com/de/">outdooractive.de</a>
+    <nav>
+        <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
+        <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
+    </nav>
 </footer>
 
 </html>
