--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -91,7 +91,7 @@
             <h2>Ein echtes Highlight: Der Kreuzeckhöhenweg</h2>
             <h3>Höhenprofile Kreuzeckhöhenweg</h3>
             <div id="profile"></div>
-            
+
             <p>Dieser Wanderweg gehört in die <b> Kategorie schwer</b> und ist etwas für echte Abenteurer. Er besteht
                 aus vier Etappen:
 
@@ -243,8 +243,13 @@
     </main>
 </body>
 <footer>
-    Quellen: <a href=" https://data.gv.at">data.gv.at</a> | <a
-        href="https://www.outdooractive.com/de/">outdooractive.de</a>
+    <p>
+        Quellen: <a href=" https://data.gv.at">data.gv.at</a> |
+        <a href="https://www.outdooractive.com/de/">outdooractive.de</a>|
+        <a
+            href="https://www.nationalpark.at/de/nationalpark/tourenportal#bm=osm%3Asummer&cat=Wandern-main,Wanderung,Fernwanderweg,Pilgerweg,Themenweg&filter=r-fullyTranslatedLangus-,r-onlyOpened-,r-openState-,sb-sortedBy-0&fu=1&ov=hiking&zc=10,12.69539,47.21724">Nationalpark
+            Hohe Tauern</a>
+    </p>
     <nav>
         <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
         <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
