--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -70,10 +70,10 @@
         </header>
         <h1><i class="fa-solid fa-person-hiking"></i> Wandertourismus im und um den Nationalpark Hohe Tauern</h1>
         <article>
-            <p> Auch das Entdecken der Natur auf Wanderwegen im Nationalpark Hohe Tauern ist ein echter Spaß. Wo und Wie
-                die Verbindungen sind und wann und wo eingekehrt werden kann seht ihr in der Karte.
-                Ein Highlight der Region ist der Kreuzeckhöhenweg. Mehr Information findet ihr dazu in der interaktiven
-                Karte und der Beschreibung darunter</p>
+            <p> Auch das Entdecken der Natur auf Wanderwegen im Nationalpark Hohe Tauern ist ein echter Spaß. Einige Beispiele an Top-Wanderwegen könnt ihr in der folgenden Karte beobachten.
+                Ob eine kleinere oder sogar mehrtägige Runde. Für jeden ist etwas dabei. 
+                Ein Highlight der Region ist zum Beispiel der <i>Kreuzeckhöhenweg</i>. FÜr mehr Informationen klicke dich durch die Seite.
+            </p>
             <div class="buttons">
                 <button onclick="zoomToKreuzeckhoehenweg()">Kreuzeckhöhenweg</button>
                 <button onclick="zoomToEtappe1()">Etappe 1</button>
