Abändern Anordnung Webseiten und Quellen

--- a/HoheTauernTourismus/index.html
+++ b/HoheTauernTourismus/index.html
@@ -63,16 +63,16 @@
     <main>
         <header>
             <nav>
-                <div class="github">
-                    <i class="fab fa-github"></i>
-                    <a href="https://github.com/HeimatDerHappyHirsche">Github</a>
+
             </nav>
         </header>
         <h1><i class="fa-solid fa-person-hiking"></i> Wandertourismus im und um den Nationalpark Hohe Tauern</h1>
         <article>
-            <p> Auch das Entdecken der Natur auf Wanderwegen im Nationalpark Hohe Tauern ist ein echter Spaß. Einige Beispiele an Top-Wanderwegen könnt ihr in der folgenden Karte beobachten.
-                Ob eine kleinere oder sogar mehrtägige Runde. Für jeden ist etwas dabei. 
-                Ein Highlight der Region ist zum Beispiel der <i>Kreuzeckhöhenweg</i>. FÜr mehr Informationen klicke dich durch die Seite.
+            <p> Auch das Entdecken der Natur auf Wanderwegen im Nationalpark Hohe Tauern ist ein echter Spaß. Einige
+                Beispiele an Top-Wanderwegen könnt ihr in der folgenden Karte beobachten.
+                Ob eine kleinere oder sogar mehrtägige Runde. Für jeden ist etwas dabei.
+                Ein Highlight der Region ist zum Beispiel der <i>Kreuzeckhöhenweg</i>. FÜr mehr Informationen klicke
+                dich durch die Seite.
             </p>
             <div class="buttons">
                 <button onclick="zoomToKreuzeckhoehenweg()">Kreuzeckhöhenweg</button>
@@ -94,8 +94,6 @@
 
             <p>Dieser Wanderweg gehört in die <b> Kategorie schwer</b> und ist etwas für echte Abenteurer. Er besteht
                 aus vier Etappen:
-
-
             </p>
             <h3>Etappe 1: Möllbrücke - Salzkofelhütte</h3>
             <details closed="">
@@ -243,17 +241,20 @@
     </main>
 </body>
 <footer>
-    <p>
         Quellen: <a href=" https://data.gv.at">data.gv.at</a> |
         <a href="https://www.outdooractive.com/de/">outdooractive.de</a>|
         <a
             href="https://www.nationalpark.at/de/nationalpark/tourenportal#bm=osm%3Asummer&cat=Wandern-main,Wanderung,Fernwanderweg,Pilgerweg,Themenweg&filter=r-fullyTranslatedLangus-,r-onlyOpened-,r-openState-,sb-sortedBy-0&fu=1&ov=hiking&zc=10,12.69539,47.21724">Nationalpark
             Hohe Tauern</a>
-    </p>
     <nav>
-        <a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> |<i class="fa-solid fa-signs-post"></i>|
-        <a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
-    </nav>
+        <div class="github">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/HeimatDerHappyHirsche">Github</a>
+        </div> <br>
+        <i class="fa-solid fa-signs-post"></i><a href=" https://heimatderhappyhirsche.github.io/">Übersichtsseite</a> <br>
+        <i class="fa-solid fa-signs-post"></i><a href="https://heimatderhappyhirsche.github.io/NationalparkHoheTauern">Nationalpark Hohe Tauern</a>
+        
+    </nav> 
 </footer>
 
 </html>
