--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <strong>Datenquellen:</strong>
             <nav>
                 <a href="https://api.met.no/weatherapi/locationforecast/2.0/documentation" target="_blank">MET Norway Locationforecast</a> |
-                <a href="https://github.com/metno/weathericons/" target="_blank">MET Weather API icons</a> |
+                <a href="https://github.com/metno/weathericons" target="_blank">MET Weather API icons</a> |
                 <a href="https://api.met.no/weatherapi/locationforecast/2.0/compact?lat=47.267222&lon=11.392778" target="_blank">MET Norway Vorhersage Innsbruck</a> |
                 <a href="https://www.ecmwf.int/en/forecasts/datasets/open-data" target="_blank">ECMWF Open Data</a>
                 <span id="forecast-date"></span>
