--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <script src="lib/leaflet-velocity.js"></script>
     <link rel="stylesheet" href="lib/leaflet-velocity.css" />
 
-    <!-- Leaflet Search -->
+    <!-- Leaflet Search (nur eine Version einbinden) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet-search@3.0.0/dist/leaflet-search.min.css">
     <script src="https://unpkg.com/leaflet-search@3.0.0/dist/leaflet-search.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-search/4.0.0/leaflet-search.src.css" integrity="sha512-FpR43e7Pv4bypI4ZNr31smjoOlRUYsCXDsiS/1bYoiwuPIPhXmsQILkSTiEORn3RRJNu9hgtpnT5VPfUty6Azw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-search/4.0.0/leaflet-search.src.js" integrity="sha512-PDM7dpetuBcPp2fV/ZyCj9BGV8ybPchsrSzQqVZ3WoM8YcxEa2lAj0n1+4MCRzgsEROmVTwQXGw0IrXCCgH+/Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
