--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 Nationalparks sind nicht nur Schutz- und Erlebnisräume, sondern auch Forschungslaboratorien und Hotspots naturbezogenen Wissens. Ob Langzeit-Monitoring, Wildkatzenerhebung, Graugans-Beobachtung oder Bildungsprojekte im Zeichen des Klimaschutzes: Unsere Nationalparks schaffen Fakten, vermitteln wertvolles Wissen und entfachen Leidenschaft für Natur.<br>
                 Die Standorte der Nationalparks sowie eine Vorhersage über Wind und Wetter <em>(zur besseren Planung Ihres Ausflugs)</em> entnehmen Sie der nachfolgenden Karte.
             </p>
+            <p>Für weitere spannende Informationen rund um das Thema Nationalparks in Österreich schaut gerne bei diesem Podcast vorbei: <a href= "https://open.spotify.com/show/5nuWzV1UZ3RAXeANbm9WKI?si=heu7Y9OQSEueZakDoLK09w" target="_blank"> Unser Naturerbe</a></p>
             <p><a href="https://www.nationalparksaustria.at/de/" target="_blank">Offizielle Website der Nationalparks</a></p>
             <div id="map"></div>
             <div id="wikipedia-content">
